--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -178,6 +178,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612140804092_we.cs" />
+    <Compile Include="Migrations\201612140804092_we.Designer.cs">
+      <DependentUpon>201612140804092_we.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612150803340_intial.cs" />
+    <Compile Include="Migrations\201612150803340_intial.Designer.cs">
+      <DependentUpon>201612150803340_intial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -292,7 +300,6 @@
     <Content Include="Views\Activities\DeleteFile.cshtml" />
     <Content Include="Views\Activities\EditFile.cshtml" />
     <Content Include="Views\Activities\IndexFiles.cshtml" />
-    <Content Include="Visual studio stuff Andreas.hnd" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -301,6 +308,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612140804092_we.resx">
+      <DependentUpon>201612140804092_we.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612150803340_intial.resx">
+      <DependentUpon>201612150803340_intial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
