--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -178,7 +178,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-
+    <Compile Include="Migrations\201612151539027_bn.cs" />
+    <Compile Include="Migrations\201612151539027_bn.Designer.cs">
+      <DependentUpon>201612151539027_bn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -301,7 +304,11 @@
   <ItemGroup>
     <Folder Include="App_Data\Uploads\" />
   </ItemGroup>
-
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612151539027_bn.resx">
+      <DependentUpon>201612151539027_bn.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
